# primitive-engineering

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md
assets/models/: branch.glb  cactus.glb  coarse-string.glb  fire.glb  flax-item.glb  flax.glb  log.glb  rock.glb  spruce-snow.glb  spruce.glb  stone-axe.glb  stump.glb  tree.glb  wooden_shovel.glb
src/: lib.rs  main.rs
src/internal/: mod.rs
src/internal/chunks/: in_world_chunk.rs  mod.rs  pointer.rs
src/internal/color/: mod.rs
src/internal/direction/: mod.rs
src/internal/game_world/: mod.rs
src/internal/pos/: mod.rs
src/internal/voxel/: add_edge.rs  append_triangle.rs  mod.rs  triangulation_table.rs  voxel_types.rs  voxels_to_vertex.rs
src/internal/voxel_pos/: mod.rs
src/internal/voxels_generator/: mod.rs
src/internal/world_generator/: landscape_height.rs  mod.rs  objects.rs  randomize_color.rs
src/plugins/: mod.rs
src/plugins/chunks/: mod.rs
src/plugins/chunks/components/: mod.rs
src/plugins/chunks/helpers/: mod.rs  spawn_chunk.rs  update_objects_parent.rs
src/plugins/chunks/resources/: mod.rs
src/plugins/chunks/systems/: details.rs  (+7 more)
src/plugins/craft/: mod.rs
src/plugins/game_world/: mod.rs
src/plugins/inspector/: mod.rs
src/plugins/items/: mod.rs
src/plugins/loading/: mod.rs
src/plugins/main_menu/: mod.rs
src/plugins/objects/: mod.rs
src/plugins/physics/: mod.rs
src/plugins/player/: mod.rs
src/plugins/static_mesh/: mod.rs
src/plugins/tooltip/: mod.rs
src/plugins/ui/: mod.rs
src/plugins/world_generator/: mod.rs
src/states/: game_state.rs  mod.rs
(+115 files in other folders)
