[package]
name = "digg"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy_flycam = "0.9.0"
bevy_egui = "0.18"
bevy-inspector-egui = "0.16.5"
rand = "0.8.5"
num-traits = "0.2.15"
egui_dock = "0.3.1"
bevy_reflect = "0.9.1"
