[package]
name = "primitive-engineering"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_egui = "0.19.0"
bevy-inspector-egui = "0.17.0"
rand = "0.8.5"
num-traits = "0.2.15"
bevy_reflect = "0.9.1"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
crossbeam-channel = "0.5.6"
bevy_rapier3d = "0.20.0"
noise = "0.8.2"
lerp = { version = "0.4", features = ["derive"] }
bevy_gltf_collider = { path = "./bevy_gltf_collider" }
bincode = "1.3.3"
serde = "1.0.152"
serde_bytes = "0.11.9"
zstd = "0.12.3"
pariter = "0.5.1"
